--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
 regex = "1"
 clap = { version = "3.1.6", features = ["derive"] }
+ariadne = "0.1.5"
